{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 34,
  "lineage": "37617f64-f0db-ad73-ce87-f40ea0af478d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0558b743e9126b2d4",
            "domain": "vpc",
            "id": "eipalloc-09a967f9bdfab5ad5",
            "network_interface": "eni-06a0578f5ad6a7ba8",
            "private_dns": "ip-10-0-1-111.ap-south-1.compute.internal",
            "private_ip": "10.0.1.111",
            "public_dns": "ec2-15-206-223-120.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.223.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c3599b5cd3e9be61",
            "owner_id": "450822338552",
            "tags": {
              "Name": "terravpc_igw"
            },
            "vpc_id": "vpc-04e246d3b1d928ca1"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a967f9bdfab5ad5",
            "id": "nat-0f456a82fd6170e30",
            "network_interface_id": "eni-06a0578f5ad6a7ba8",
            "private_ip": "10.0.1.111",
            "public_ip": "15.206.223.120",
            "subnet_id": "subnet-0c034d374f53a14f3"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.pub_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04f298287095f0efe",
            "owner_id": "450822338552",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3599b5cd3e9be61",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terravpc-rt-ig"
            },
            "vpc_id": "vpc-04e246d3b1d928ca1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05d88872ff9cdd2f4",
            "owner_id": "450822338552",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f456a82fd6170e30",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terravpc-rt-ngw"
            },
            "vpc_id": "vpc-04e246d3b1d928ca1"
          },
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sa-pri",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0641d0182aa333960",
            "route_table_id": "rtb-05d88872ff9cdd2f4",
            "subnet_id": "subnet-0bbfa03ec21fdcd07"
          },
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_route_table.rt-nat",
            "aws_subnet.pri_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sa-pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acaf5ee46e6041cf",
            "route_table_id": "rtb-04f298287095f0efe",
            "subnet_id": "subnet-0c034d374f53a14f3"
          },
          "dependencies": [
            "aws_route_table.rt-ig",
            "aws_subnet.pub_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:450822338552:subnet/subnet-0bbfa03ec21fdcd07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0bbfa03ec21fdcd07",
            "map_public_ip_on_launch": false,
            "owner_id": "450822338552",
            "tags": {
              "Name": "terravpc_pri_subnet"
            },
            "vpc_id": "vpc-04e246d3b1d928ca1"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:450822338552:subnet/subnet-0c034d374f53a14f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c034d374f53a14f3",
            "map_public_ip_on_launch": false,
            "owner_id": "450822338552",
            "tags": {
              "Name": "terravpc_pub_sunet"
            },
            "vpc_id": "vpc-04e246d3b1d928ca1"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:450822338552:vpc/vpc-04e246d3b1d928ca1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d05ea59d05ebf1fb",
            "default_route_table_id": "rtb-0f03b748081f83065",
            "default_security_group_id": "sg-0876bd57cf7ca7b9f",
            "dhcp_options_id": "dopt-30435c58",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04e246d3b1d928ca1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f03b748081f83065",
            "owner_id": "450822338552",
            "tags": {
              "Name": "terra_vpc"
            }
          }
        }
      ]
    }
  ]
}